--- a/src/components/pages/discover-page/DiscoverPage.scss
+++ b/src/components/pages/discover-page/DiscoverPage.scss
@@ -13,6 +13,7 @@
       width: 100%;
       box-sizing: border-box;
       margin-bottom: calc(#{$bottom-navbar-height} + #{$big-element-spacing});
+      overflow: visible;
 
       .swiper-pagination {
         top: 0;
