--- a/src/components/tags/tags-management-panel/TagsManagementPanel.scss
+++ b/src/components/tags/tags-management-panel/TagsManagementPanel.scss
@@ -76,7 +76,7 @@
         justify-content: center;
 
         .search-list-item {
-          @include tag-chip;
+          @include chip;
 
           &.selected {
             background-color: $strong-highlighted-background;
