--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -14,16 +14,18 @@ $outer-border-radius-10: 10px;
 $outer-border-radius-25: 25px;
 $round-border-radius-50: 50px;
 
-$highlighted-background: rgba(128, 128, 128, 0.075);
+$highlighted-background: rgba(128, 128, 128, 0.03);
 $strong-highlighted-background: rgba(128, 128, 128, 0.25);
 
+$white-transparent-background-1: rgba(255, 255, 255, 0.01);
+$white-transparent-background-5: rgba(255, 255, 255, 0.05);
 $white-transparent-background-10: rgba(255, 255, 255, 0.1);
 $white-transparent-background-25: rgba(255, 255, 255, 0.25);
 $white-transparent-background-35: rgba(255, 255, 255, 0.35);
 $white-transparent-background-75: rgba(255, 255, 255, 0.75);
 
-$gradient-transparent-background: linear-gradient(270deg, rgba(121,0,255,0.25) 0%, rgba(255,255,255,0.25) 100%);
-$gradient-transparent-background-soft: linear-gradient(45deg, rgba(183,119,255,0.25) 0%, rgba(255,255,255,0.25) 100%);
+$gradient-transparent-background: linear-gradient(270deg, rgba(121,0,255,0.25) 0%, rgba(255, 255, 255, 0.25) 100%);
+$gradient-transparent-background-soft: linear-gradient(270deg, rgba(183,119,255,0.25) 0%, rgba(255, 255, 255, 0.15) 100%);
 
 $dish-card-width: 85vw;
 $mini-dish-card-height: 60vh;
