--- a/src/components/tags/tags-management-panel/TagsManagementPanel.scss
+++ b/src/components/tags/tags-management-panel/TagsManagementPanel.scss
@@ -75,8 +75,9 @@
         flex-wrap: wrap;
         justify-content: center;
 
-        .search-list-item {
+        .tag-chip {
           @include chip;
+          background-color: $highlighted-background;
 
           &.selected {
             background-color: $strong-highlighted-background;
