--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -11,16 +11,6 @@
   text-align: center;
   justify-content: center;
   font-family: 'Montserrat', sans-serif;
-
-  &:before {
-    background: url('../../public/background.svg');
-    content: "";
-    background-size: cover;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0.1;
-  }
 }
 
 @mixin dish-card {
@@ -58,13 +48,13 @@
 @mixin search-list {
   position: absolute;
   max-height: 60vh;
-  top: calc(#{$top-navbar-height} + 5px);
-  border-radius: 10px;
+  top: calc(#{$top-navbar-height} + #{$small-element-spacing});
+  border-radius: $standard-element-spacing;
   width: 100%;
   left: 0;
 
   .search-list-item {
-    border-top: thin solid $highlighted-background;
+    border-top: thin solid $lightly-highlighted-background;
     box-sizing: border-box;
 
     .list-item-icon {
@@ -83,7 +73,7 @@
     }
 
     .list-item-info {
-      margin-left: 10px;
+      margin-left: $standard-element-spacing;
       opacity: 0.5;
       font-size: $tiny-font-size;
     }
@@ -93,22 +83,25 @@
 @mixin search-bar {
   display: flex;
   align-items: center;
-  padding: 10px;
-  border-radius: 10px;
+  padding: $standard-element-spacing;
+  border-radius: $outer-border-radius-10;
   position: relative;
 
   .search-input {
     flex-grow: 1;
-    margin: 0 10px;
+    margin: 0 $standard-element-spacing;
     font-weight: bold;
   }
 }
 
 @mixin action-button-standard {
-  padding: 10px 25px;
+  -webkit-box-shadow: $button-shadow;
+  -moz-box-shadow: $button-shadow;
+  box-shadow: $button-shadow;
+  padding: $standard-element-spacing $huge-element-spacing;
   width: fit-content;
   height: fit-content;
-  border-radius: 50px;
+  border-radius: $round-border-radius-50;
 }
 
 @mixin dish-card-action-button {
@@ -118,9 +111,9 @@
 }
 
 @mixin translucent-tile {
-  -webkit-box-shadow: 0 0 25px 0 rgba(66, 68, 90, 0.3);
-  -moz-box-shadow: 0 0 25px 0 rgba(66, 68, 90, 0.3);
-  box-shadow: 0 0 25px 0 rgba(66, 68, 90, 0.3);
+  -webkit-box-shadow: $shadow;
+  -moz-box-shadow: $shadow;
+  box-shadow: $shadow;
   background: $gradient-transparent-background-soft;
   border-radius: $outer-border-radius-10;
   padding: $small-element-spacing;
