--- a/src/components/ingredients/ingredients-list/IngredientList.scss
+++ b/src/components/ingredients/ingredients-list/IngredientList.scss
@@ -4,8 +4,12 @@
 .ingredient-list-container {
   text-align: center;
 
-  .ingredient-tile {
-    @include chip;
+  .ingredient-tile-container {
+    display: inline-flex;
+
+    .ingredient-tile {
+      @include chip;
+    }
   }
 
   .servings-container {
