--- a/src/components/ingredients/ingredient-tile/IngredientTile.scss
+++ b/src/components/ingredients/ingredient-tile/IngredientTile.scss
@@ -13,35 +13,57 @@
 }
 
 .ingredients-edit-dialog {
-  padding: $standard-element-spacing;
+  padding: $standard-element-spacing $huge-element-spacing;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  .divider {
-    margin: $standard-element-spacing auto;
-    width: 90%;
+  .ingredients-edit-info-image {
+    height: 30vh;
+    margin-bottom: $standard-element-spacing;
   }
 
-  .ingredients-edit-dialog-row {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 75vw;
+  .ingredients-edit-info-header {
+    @include info-header;
+    margin-bottom: $standard-element-spacing;
+  }
 
-    .action-button {
-      border-radius: $round-border-radius-50;
-      margin: $small-element-spacing auto;
-      height: 30px;
-    }
+  .ingredients-edit-info-description {
+    @include info-description;
+    margin-bottom: $huge-element-spacing;
+  }
 
-    .field-name-label {
-      margin-right: $standard-element-spacing;
-      opacity: 0.5;
-    }
+  .ingredients-edit-form {
+    width: 100%;
 
-    .editable-text-field, .field-name-label {
-      font-size: $standard-font-size;
+    .ingredients-edit-form-row {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      .action-button {
+        @include action-button-standard;
+        margin: $big-element-spacing $small-element-spacing 0;
+      }
+
+      .field-name-label {
+        margin-right: $standard-element-spacing;
+        font-weight: 600;
+        opacity: 0.75;
+      }
+
+      .editable-text-field, .field-name-label {
+        font-size: $standard-font-size;
+        margin-bottom: $standard-element-spacing;
+      }
+
+      .editable-text-field {
+        padding: $small-element-spacing $standard-element-spacing;
+        background-color: $highlighted-background;
+        border-radius: $outer-border-radius-10;
+        flex-grow: 1;
+      }
     }
   }
 }
