T-26: Updated dish add/update status message

--- a/src/components/dishes/dish-card/dish-card-back/DishCardBack.scss
+++ b/src/components/dishes/dish-card/dish-card-back/DishCardBack.scss
@@ -26,6 +26,7 @@
     }
 
     @include dish-card-components;
+    border-radius: $inner-border-radius-5;
     overflow-y: auto;
     overflow-x: hidden;
     flex-grow: 1;
