T-31: Dish slides optimization

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -19,7 +19,11 @@
   margin-top: calc(#{$top-navbar-height} + #{$page-offset} + #{$huge-element-spacing});
   margin-right: auto;
   margin-left: auto;
+  position: relative;
   box-sizing: border-box;
+  overflow: hidden;
+  display: flex;
+  @include translucent-tile;
 }
 
 @mixin navbar {
