--- a/src/components/pages/menu-page/menu-list/MenuList.scss
+++ b/src/components/pages/menu-page/menu-list/MenuList.scss
@@ -19,10 +19,12 @@
     .empty-menu-header {
       @include info-header;
       margin-bottom: $standard-element-spacing;
+      width: 70%;
     }
 
     .empty-menu-info {
       @include info-description;
+      width: 80%;
       margin-bottom: $huge-element-spacing;
       font-size: $standard-font-size;
     }
