T-33: Improved tags managing, fixed adding dish card view, displaying 'ALL' tag if no tag is selected

--- a/src/components/dishes/dish-card/other-variants/error-dish-card/ErrorDishCard.scss
+++ b/src/components/dishes/dish-card/other-variants/error-dish-card/ErrorDishCard.scss
@@ -34,6 +34,10 @@
     margin-bottom: $small-element-spacing;
   }
 
+  .error-title {
+    padding: 8% 0;
+  }
+
   .error-button {
     @include dish-card-action-button;
   }
