T-33: Autofocus on editable text fields while editing dish recipe

--- a/src/components/ingredients/ingredient-tile/IngredientTile.scss
+++ b/src/components/ingredients/ingredient-tile/IngredientTile.scss
@@ -27,7 +27,7 @@
 
     .action-button {
       @include action-button-standard;
-      margin: $big-element-spacing $small-element-spacing 0;
+      margin: $small-element-spacing;
     }
   }
 
