--- a/src/index.scss
+++ b/src/index.scss
@@ -21,4 +21,12 @@ body {
 
 .swiper {
     width: 100%;
+    height: 100%;
+
+    .swiper-slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+    }
 }
