T-40: Implemented authentication, blocking unauthorized access, redirecting

--- a/src/components/status-screen/StatusScreen.scss
+++ b/src/components/status-screen/StatusScreen.scss
@@ -35,6 +35,7 @@
     .status-screen-buttons {
       display: flex;
       flex-direction: row;
+      font-weight: bold;
 
       .status-screen-button {
         @include action-button-standard;
