--- a/src/components/tags/tags-list/TagsList.scss
+++ b/src/components/tags/tags-list/TagsList.scss
@@ -11,6 +11,7 @@
 
     .tags-select-form-content {
       overflow-y: auto;
+      overflow-x: hidden;
       display: flex;
       flex-direction: column;
       justify-content: center;
