T-43: Users management panel

--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -98,6 +98,7 @@
 }
 
 @mixin action-button-standard {
+  font-weight: bold;
   -webkit-box-shadow: $button-shadow;
   -moz-box-shadow: $button-shadow;
   box-shadow: $button-shadow;
