--- a/src/components/dishes/dish-card/DishCardShared.scss
+++ b/src/components/dishes/dish-card/DishCardShared.scss
@@ -21,6 +21,7 @@
   }
 
   .dish-name {
+    width: 100%;
     white-space: nowrap;
     text-overflow: ellipsis;
     padding: $standard-element-spacing;
