T-49: Implemented custom alert messages

--- a/src/components/navbars/top-navbar/TopNavbar.scss
+++ b/src/components/navbars/top-navbar/TopNavbar.scss
@@ -3,6 +3,7 @@
 
 .top-navbar-container {
   @include translucent-tile;
+  max-width: calc(#{$max-page-width} + #{$big-element-spacing});
   padding: 0;
   display: flex;
   justify-content: flex-start;
