--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -41,6 +41,7 @@ $huge-font-size: 2.5rem;
 $icon-font-size: 3rem;
 
 $shadow: 0 0 25px 0 rgba(20, 20, 20, 0.1);
+$strong-shadow: 0px 8px 15px 0px rgba(29, 29, 29, 0.5);
 $button-shadow: 0 8px 5px -5px rgba(20, 20, 20, 0.1);
 
-$max-page-width: calc(75 * var(--vh));
+$max-page-width: calc(64 * var(--vh));
